crates/rome_formatter/tests/specs/prettier/js/strings/template-literals.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 125
expression: template-literals.js

---
# Input
```js
foo(`a long string ${ 1 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 } with expr`);

const x = `a long string ${ 1 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + ( function() {return 3 })() + 3 + 2 + 3 + 2 + 3 } with expr`;

foo(`a long string ${ 1 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + ( function() {
  const x = 5;

  return x;
 })() + 3 + 2 + 3 + 2 + 3 } with expr`);

pipe.write(
  `\n  ${chalk.dim(`\u203A and ${more} more ${more} more ${more} more ${more}`)}`,
);

// https://github.com/prettier/prettier/issues/1662#issue-230406820
const content = `
const env = ${ JSON.stringify({
	assetsRootUrl: env.assetsRootUrl,
	env: env.env,
	role: "client",
	adsfafa: "sdfsdff",
	asdfasff: "wefwefw",
  	fefef: "sf sdfs fdsfdsf s dfsfds"
}, null, "\t") });
`;

// https://github.com/prettier/prettier/issues/821#issue-210557749
f(`${{
  a: 4,
  b: 9,
}}`);

// https://github.com/prettier/prettier/issues/1183#issue-220863505
const makeBody = (store, assets, html) =>
  `<!doctype html>${
    ReactDOMServer.renderToStaticMarkup(
      <Html
        headScripts={compact([ assets.javascript.head ])}
        headStyles={compact([ assets.styles.body, assets.styles.head ])}
        bodyScripts={compact([ assets.javascript.body ])}
        bodyStyles={[]}
        stringScripts={[
          `window.__INITIAL_STATE__ = ${
            JSON.stringify(store.getState(), null, 2)
          };`,
        ]}
        content={[
          { id: 'app-container', dangerouslySetInnerHTML: { __html: html } },
        ]}
      />
    )
  }`

// https://github.com/prettier/prettier/issues/1626#issue-229655106
const Bar = styled.div`
  color: ${props => (props.highlight.length > 0 ? palette(['text', 'dark', 'tertiary'])(props) : palette(['text', 'dark', 'primary'])(props))} !important;
`

```

# Output
```js
foo(
  `a long string ${
    1 +
    2 +
    3 +
    2 +
    3 +
    2 +
    3 +
    2 +
    3 +
    2 +
    3 +
    2 +
    3 +
    2 +
    3 +
    2 +
    3
  } with expr`,
);

const x = `a long string ${
  1 +
  2 +
  3 +
  2 +
  3 +
  2 +
  3 +
  2 +
  3 +
  2 +
  3 +
  2 +
  (function () {
    return 3;
  })() +
  3 +
  2 +
  3 +
  2 +
  3
} with expr`;

foo(
  `a long string ${
    1 +
    2 +
    3 +
    2 +
    3 +
    2 +
    3 +
    2 +
    3 +
    2 +
    3 +
    2 +
    (function () {
      const x = 5;

      return x;
    })() +
    3 +
    2 +
    3 +
    2 +
    3
  } with expr`,
);

pipe.write(
  `\n  ${chalk.dim(`\u203A and ${more} more ${more} more ${more} more ${more}`)}`,
);

// https://github.com/prettier/prettier/issues/1662#issue-230406820
const content = `
const env = ${JSON.stringify(
  {
    assetsRootUrl: env.assetsRootUrl,
    env: env.env,
    role: "client",
    adsfafa: "sdfsdff",
    asdfasff: "wefwefw",
    fefef: "sf sdfs fdsfdsf s dfsfds",
  },
  null,
  "\t",
)});
`;

// https://github.com/prettier/prettier/issues/821#issue-210557749
f(`${{ a: 4, b: 9 }}`);

// https://github.com/prettier/prettier/issues/1183#issue-220863505
const makeBody = (store, assets, html) =>
  `<!doctype html>${
    ReactDOMServer.renderToStaticMarkup(
      <Html
        headScripts={compact([ assets.javascript.head ])}
        headStyles={compact([ assets.styles.body, assets.styles.head ])}
        bodyScripts={compact([ assets.javascript.body ])}
        bodyStyles={[]}
        stringScripts={[
          `window.__INITIAL_STATE__ = ${
            JSON.stringify(store.getState(), null, 2)
          };`,
        ]}
        content={[
          { id: 'app-container', dangerouslySetInnerHTML: { __html: html } },
        ]}
      />
    )
  }`

// https://github.com/prettier/prettier/issues/1626#issue-229655106
const Bar = styled.div`
  color: ${
  (props) => (
    props.highlight.length > 0 ? palette(["text", "dark", "tertiary"])(props) : palette([
      "text", "dark", "primary",
    ])(props)
  )
} !important;
`;

```

# Errors
```
error[SyntaxError]: Invalid assignment to `<Html
        headScripts`
   ┌─ template-literals.js:37:7
   │  
37 │ ┌       <Html
38 │ │         headScripts={compact([ assets.javascript.head ])}
   │ └───────────────────^ This expression cannot be assigned to

error[SyntaxError]: expected `,` but instead found `.`
   ┌─ template-literals.js:38:38
   │
38 │         headScripts={compact([ assets.javascript.head ])}
   │                                      ^ unexpected

error[SyntaxError]: expected a function body but instead found '}'
   ┌─ template-literals.js:38:57
   │
38 │         headScripts={compact([ assets.javascript.head ])}
   │                                                         ^ Expected a function body here

error[SyntaxError]: expected `,` but instead found `headStyles`
   ┌─ template-literals.js:39:9
   │
39 │         headStyles={compact([ assets.styles.body, assets.styles.head ])}
   │         ^^^^^^^^^^ unexpected

error[SyntaxError]: expected `,` but instead found `.`
   ┌─ template-literals.js:39:37
   │
39 │         headStyles={compact([ assets.styles.body, assets.styles.head ])}
   │                                     ^ unexpected

error[SyntaxError]: expected `,` but instead found `.`
   ┌─ template-literals.js:39:57
   │
39 │         headStyles={compact([ assets.styles.body, assets.styles.head ])}
   │                                                         ^ unexpected

error[SyntaxError]: expected a function body but instead found '}'
   ┌─ template-literals.js:39:72
   │
39 │         headStyles={compact([ assets.styles.body, assets.styles.head ])}
   │                                                                        ^ Expected a function body here

error[SyntaxError]: expected `,` but instead found `bodyScripts`
   ┌─ template-literals.js:40:9
   │
40 │         bodyScripts={compact([ assets.javascript.body ])}
   │         ^^^^^^^^^^^ unexpected

error[SyntaxError]: expected `,` but instead found `.`
   ┌─ template-literals.js:40:38
   │
40 │         bodyScripts={compact([ assets.javascript.body ])}
   │                                      ^ unexpected

error[SyntaxError]: expected a function body but instead found '}'
   ┌─ template-literals.js:40:57
   │
40 │         bodyScripts={compact([ assets.javascript.body ])}
   │                                                         ^ Expected a function body here

error[SyntaxError]: expected `,` but instead found `bodyStyles`
   ┌─ template-literals.js:41:9
   │
41 │         bodyStyles={[]}
   │         ^^^^^^^^^^ unexpected

error[SyntaxError]: expected an expression but instead found ']'
   ┌─ template-literals.js:41:22
   │
41 │         bodyStyles={[]}
   │                      ^ Expected an expression here

error[SyntaxError]: expected `:` but instead found `}`
   ┌─ template-literals.js:41:23
   │
41 │         bodyStyles={[]}
   │                       ^ unexpected

error[SyntaxError]: expected `,` but instead found `stringScripts`
   ┌─ template-literals.js:42:9
   │
42 │         stringScripts={[
   │         ^^^^^^^^^^^^^ unexpected

error[SyntaxError]: expected an expression but instead found ']'
   ┌─ template-literals.js:46:9
   │
46 │         ]}
   │         ^ Expected an expression here

error[SyntaxError]: expected `:` but instead found `}`
   ┌─ template-literals.js:46:10
   │
46 │         ]}
   │          ^ unexpected

error[SyntaxError]: expected `,` but instead found `content`
   ┌─ template-literals.js:47:9
   │
47 │         content={[
   │         ^^^^^^^ unexpected

error[SyntaxError]: expected an expression but instead found ']'
   ┌─ template-literals.js:49:9
   │
49 │         ]}
   │         ^ Expected an expression here

error[SyntaxError]: expected `:` but instead found `}`
   ┌─ template-literals.js:49:10
   │
49 │         ]}
   │          ^ unexpected

error[SyntaxError]: Expected an expression for the right hand side of a `/`, but found an operator instead
   ┌─ template-literals.js:50:8
   │
50 │       />
   │       -^ But this operator was encountered instead
   │       │ 
   │       This operator requires a right hand side value

error[SyntaxError]: expected an expression but instead found ')'
   ┌─ template-literals.js:51:5
   │
51 │     )
   │     ^ Expected an expression here


```


